# kvkk-pii

./: .gitignore  CLAUDE.md  PLAN.md  README.md  compass_artifact_wf-d54b179e-b340-47f8-9abb-d711206ee2e9_text_markdown.md  pyproject.toml
examples/: chatgpt_proxy.py  kvkk_raporu.py  log_temizleyici.py
kvkk_pii/: __init__.py  async_detector.py  base.py  cli.py  compliance.py  config.py  detector.py  leakage.py  logging.py  normalizer.py  presets.py  proxy.py  result.py  session.py
kvkk_pii/layers/: __init__.py  gliner_layer.py  ner_layer.py  regex_layer.py
kvkk_pii/recognizers/: __init__.py  adres.py  de_recognizers.py  fr_recognizers.py  genel.py  iban.py  kisi_adi.py  kredi_karti.py  plaka.py  sgk.py  tarih.py  tc_kimlik.py  telefon.py  vkn.py
tests/: test_async.py  test_cli.py  test_compliance.py  test_de_fr_recognizers.py  test_detector.py  test_ner_chunking.py  test_ner_layer.py  test_real_world.py  test_recognizers.py  test_regex_layer.py  test_session.py  test_session_leakage.py  test_sgk_adres.py  test_tc_kimlik.py  test_telefon.py  test_two_way_and_gliner.py
tests/fixtures/: telefon.json
