[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvkk-pii"
version = "0.1.2"
description = "KVKK uyumlu Türkçe PII detection kütüphanesi"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["pii", "kvkk", "gdpr", "turkish", "nlp", "privacy", "data-protection"]

dependencies = []

[project.optional-dependencies]
ner = [
    "transformers>=4.40",
    "torch>=2.0",
    "huggingface-hub>=0.20",
]
full = [
    "transformers>=4.40",
    "torch>=2.0",
    "huggingface-hub>=0.20",
    "gliner>=0.2",
]
server = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
kvkk-pii = "kvkk_pii.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kvkk_pii*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
